2010-02-17  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-17-10
	* add python directory
	* add cfi.py files for ModuleWebRegistry, MicroStateService, and
	TimeProfierService

2010-02-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-17-09
	* update edmConfigFromDB: options --v1 (default) and --v0 added,
	allowing to switch between the old and new webserver. Kindly
	provided by Andrea Bocci.

2009-11-06  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-17-04 (01-02-03 used by some wiseguy to change includes
	[probably Peter Elment])
	* Changed microstate name from IN to INPUT and from IND to INPUTDONE

2009-10-19  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-17-00
	* Modifications for use with MPEP (requires recompilation of RB too)
	
2009-09-19  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-16-06
	* more 64-bit pointer cast fixes

2009-09-18  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-16-05
	* fix for 64-bit compilation
	
2009-09-18  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-16-04 (date not known)
	* added setMicroState method to allow accounting for DQM output 

2009-05-09  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-16-03
	* fix misrepresented microstate when waiting on INPUT
	
	
2009-04-09  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-16-02 (16-00 and 16-01 contain various undocumented 
	changes by Peter Elmer)
	* adapt to changes in evtn interface
	* set curl verbosity and disable signals

2009-01-09  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-15-05
	* put back BxNumberFilter.cc in plugins tag

2009-01-09  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-15-04
	* get header file for StateMachine from HEAD (spotted by Pete)
	* re-instate RunBase as its use in StorageManager is unclear

2009-01-08  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V00-15-03
	* merge of HEAD and online branch
	* cleaned up obsolete classes
	* added ServiceWeb access and Stepper