@@ -1,3 +1,8 @@
+2010-03-23  Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V00-17-12
+	* add Vulture/CurlPoster features
+
 2010-02-17  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-17-10
